# clean_arch_flask

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
src/data/interfaces/: users_repository.py
src/data/use_cases/: user_finder.py  user_register.py
src/domain/models/: users.py
src/domain/use_cases/: user_finder.py  user_register.py
src/erros/: error_handler.py
src/erros/types/: __init__.py  http_bad_request.py  http_internal_server_error.py  http_not_found.py  http_unprocessable_entity.py
src/infra/db/: connection.py  create_tables.py  settings.py
src/infra/db/models/: users.py
src/infra/db/repositories/: users_repository.py
src/main/adapters/: request_adapter.py
src/main/composers/: user_finder_compose.py  user_register_compose.py
src/main/routes/: routes.py
src/main/server/: server.py
src/presentation/controllers/: user_finder_controller.py  user_registry_controller.py
src/presentation/http_types/: http_request.py  http_response.py
src/presentation/interfaces/: controller_interface.py
src/repositories/: users_repository.py
src/validator/: user_finder_validator.py  user_register_validator.py
tests/data/use_cases/: test_user_finder.py  test_user_registry.py  user_finder_spy.py  user_registry_spy.py
tests/infra/db/: test_connection.py
tests/presentation/controllers/: test_user_finder_controller.py  test_user_registry_controller.py
tests/repositories/: test_users_repository.py
tests/validator/: test_user_finder_validator.py  test_user_register_validator.py
(+2 files in other folders)
